--- a/view/frontend/web/main.less
+++ b/view/frontend/web/main.less
@@ -22,7 +22,8 @@ body.page-product-configurable {
 	}
 	// 2018-06-04 «How to style Disabled Options in a form» https://stackoverflow.com/a/25806984
 	.swatch-select option {
-		color: black;
-		&:disabled, &[value='0'] {color: gray;}
+		color: black; font-weight: bolder;
+		&[value='0'] {color: gray; font-weight: lighter;}
+		&:disabled {color: gainsboro; font-weight: lighter;}
 	}
 }
