--- a/view/frontend/layout/catalog_category_view.xml
+++ b/view/frontend/layout/catalog_category_view.xml
@@ -3,5 +3,5 @@
 	xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'
 	xsi:noNamespaceSchemaLocation='urn:magento:framework:View/Layout/etc/page_configuration.xsd'
 >
-	<head><css src='Frugue_Configurable::product.css'/></head>
+	<head><css src='Frugue_Configurable::list.css'/></head>
 </page>
