--- a/view/frontend/layout/catalog_product_view_type_configurable.xml
+++ b/view/frontend/layout/catalog_product_view_type_configurable.xml
@@ -3,5 +3,6 @@
 	xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'
 	xsi:noNamespaceSchemaLocation='urn:magento:framework:View/Layout/etc/page_configuration.xsd'
 >
+<!-- 2020-02-07 TemplateMonster/theme007 does not load `_module.less` files. -->
 	<head><css src='Frugue_Configurable::product.css'/></head>
 </page>
